<resources>
    <string name="app_name">JunctionHack</string>

    <string name="price_range">$%d - %d$</string>
    <string name="common_price">%d$</string>
    <string name="common_next">Next</string>
    <string name="common_change">Change</string>
    <string name="common_date">%d %s</string>
    <string name="common_search">Search</string>

    <string name="snackbar_work_in_progress">Work in progress</string>
    <string name="snackbar_select_interests">Select interests</string>
    <string name="snackbar_select_budget_range">Select budget range</string>
    <string name="snackbar_code_notice">Write any code</string>

    <string name="start_hello">Hi, friend!</string>
    <string name="start_title">Travel with us!</string>

    <string name="sign_in_button">Login now</string>
    <string name="sign_in_phone_number">Phone number</string>

    <string name="confirm_code_label">Code number</string>

    <string name="tours_title">Your tours</string>
    <string name="tours_hint">Where would you like to go?</string>
    <string name="tours_rating">Rating:</string>
    <string name="tours_price">Total Price:</string>
    <string name="tours_date_hint">DD-MM</string>

    <string name="bottom_menu_tours">Your tours</string>
    <string name="bottom_menu_profile">Profile</string>

    <string name="budget_title">Select your budget</string>

    <string name="tour_detail_description_label">Description:</string>
    <string name="tour_detail_favorite">Add to favourites</string>
    <string name="tour_detail_buy">Buy tour</string>
    <string name="tour_detail_include_title">What\'s included in the tour?</string>
    <string name="tour_detail_participants">Number of participants:</string>
    <string name="tour_detail_tickets_title">Tickets for this tour (included in the price)</string>

    <string name="week_sunday">S</string>
    <string name="week_monday">M</string>
    <string name="week_tuesday">T</string>
    <string name="week_wednesday">W</string>
    <string name="week_thursday">T</string>
    <string name="week_friday">F</string>
    <string name="week_saturday">S</string>
    <string name="profile_tickets_title">My tickets</string>
    <string name="profile_favorite_title">A wish list</string>
    <string name="interests_title">Select topics of interest</string>


</resources>