<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/legendLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvSunday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        style="@style/TextViewSize18Black50Regular"
        android:text="@string/week_sunday" />

    <TextView
        android:id="@+id/tvMonday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/TextViewSize18Black50Regular"
        android:gravity="center"
        android:text="@string/week_monday" />

    <TextView
        android:id="@+id/tvTuesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        style="@style/TextViewSize18Black50Regular"
        android:text="@string/week_tuesday" />

    <TextView
        android:id="@+id/tvWednesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/TextViewSize18Black50Regular"
        android:gravity="center"
        android:text="@string/week_wednesday"
        />

    <TextView
        android:id="@+id/tvThursday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/TextViewSize18Black50Regular"
        android:gravity="center"
        android:text="@string/week_thursday" />

    <TextView
        android:id="@+id/tvFriday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        style="@style/TextViewSize18Black50Regular"
        android:text="@string/week_friday" />

    <TextView
        android:id="@+id/tvSaturday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        style="@style/TextViewSize18Black50Regular"
        android:text="@string/week_saturday"
        />

</LinearLayout>