<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_f5f">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/start_image"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_purple_start"
            android:paddingBottom="24dp"
            android:translationY="-24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBackground" />

        <TextView
            android:id="@+id/tvHello"
            style="@style/TextViewSize18Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/start_hello"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBackground" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_title"
            app:layout_constraintStart_toStartOf="@id/tvHello"
            app:layout_constraintTop_toBottomOf="@id/tvHello" />

        <TextView
            android:id="@+id/tvLabel"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:labelFor="@id/etPhoneNumber"
            android:text="@string/sign_in_phone_number"
            app:layout_constraintStart_toStartOf="@id/etPhoneNumber"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/tvLabel" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/sign_in_button"
            app:layout_constraintTop_toBottomOf="@id/etPhoneNumber" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>