<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_f5f"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:src="@color/black_50"
            android:scaleType="center"
            android:adjustViewBounds="true"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="16dp" />

        <TextView
            android:id="@+id/tvType"
            style="@style/TextViewSize16WhiteSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/ivClose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivClose"
            tools:text="Sights" />


        <TextView
            android:id="@+id/tvRating"
            style="@style/TextViewSize18WhiteRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tours_rating"
            app:layout_constraintBottom_toTopOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextViewSize29WhiteBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="@id/ivIcon"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Masjidhul Aisha" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            style="@style/RatingBarWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:isIndicator="true"
            android:rating="3"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="@id/tvRating"
            app:layout_constraintStart_toEndOf="@id/tvRating"
            app:layout_constraintTop_toTopOf="@id/tvRating" />

        <View
            android:id="@+id/viewBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_purple_start"
            android:paddingBottom="24dp"
            android:translationY="-24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivIcon" />


        <TextView
            android:id="@+id/tvDescriptionLabel"
            style="@style/TextViewSize18Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/tour_detail_description_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivIcon" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextViewSize16TitleRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescriptionLabel"
            tools:text="Biggest mosque in Ari Atoll of Maldives. The mosque is an architectural landmark in Thoddoo. The mosque is built by Maldivian business tycoon Qasim Ibrahim. The mosque is named after one of his wife. The two story mosque is becoming a tourist attraction due to its unique architecture. The magnificent golden dome of the mosque standout as are also the interior wall decorated with beautiful Arabic calligraphy." />

        <TextView
            android:id="@+id/tvParticipantsTitle"
            style="@style/TextViewSize18Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/tour_detail_participants"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <TextView
            android:id="@+id/tvParticipants"
            style="@style/TextViewSize16TitleRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvParticipantsTitle"
            tools:text="Tour price is for one person" />

        <TextView
            android:id="@+id/tvIncludeTitle"
            style="@style/TextViewSize18Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/tour_detail_include_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvParticipants" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTourStep"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tvIncludeTitle"
            tools:itemCount="5"
            tools:listitem="@layout/rv_detail_tour_item" />

        <TextView
            android:id="@+id/tvTicketsTitle"
            style="@style/TextViewSize18Hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/tour_detail_tickets_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvTourStep" />

        <include
            android:id="@+id/viewTicket"
            layout="@layout/view_ticket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvTicketsTitle"/>

        <Button
            android:id="@+id/btnBuy"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/tour_detail_buy"
            app:layout_constraintTop_toBottomOf="@id/viewTicket" />

        <Button
            android:id="@+id/btnFavorite"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/tour_detail_favorite"
            app:layout_constraintTop_toBottomOf="@id/btnBuy" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/btnFavorite" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>