<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_f5f">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/start_image"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_purple_start"
            android:paddingBottom="24dp"
            android:translationY="-24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBackground" />

        <TextView
            android:id="@+id/tvHello"
            style="@style/TextViewSize18Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/start_hello"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBackground" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_title"
            app:layout_constraintStart_toStartOf="@id/tvHello"
            app:layout_constraintTop_toBottomOf="@id/tvHello" />

        <TextView
            android:id="@+id/tvLabelCode"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/confirm_code_label"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/etPinCode"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:cursorVisible="true"
            android:digits="1234567890"
            android:fontFamily="@font/monsterrat_extrabold"
            android:inputType="number"
            android:maxLength="4"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textColor="@color/title_color"
            android:textIsSelectable="false"
            android:textSize="35sp"
            app:layout_constraintTop_toBottomOf="@id/tvLabelCode"
            app:pinBackgroundDrawable="@drawable/bg_pin"
            app:pinBackgroundIsSquare="false"
            app:pinTextBottomPadding="24dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etPinCode"
            android:layout_marginTop="32dp"/>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>